Bug 699726: Don't call glutGetModifiers from motion callbacks.

The only valid callbacks for this function are the mouse and keyboard
callbacks.